--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "recoil": "^0.5.2",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^2.1.2"
   },
