--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^4.1.17",
+    "pouchdb": "^7.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "recoil": "^0.5.2",
     "socket.io-client": "^4.4.0",
+    "use-pouchdb": "^1.3.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
