--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-terminal-ui": "^0.1.14",
     "recoil": "^0.5.2",
     "socket.io-client": "^4.4.0",
     "use-pouchdb": "^1.3.0",
