--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^4.1.17",
     "pouchdb": "^7.2.2",
+    "pouchdb-browser": "^7.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
