--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "icarus.front",
   "version": "0.1.0",
+  "proxy": "http://localhost:8888",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.7.3",
@@ -9,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "pouchdb": "^7.2.2",
     "pouchdb-browser": "^7.2.2",
