--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pouchdb-browser": "^7.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.14.0",
     "react-scripts": "5.0.0",
     "react-terminal-ui": "^0.1.14",
     "recoil": "^0.5.2",
