--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
+    "js-yaml": "^4.1.0",
     "pouchdb": "^7.2.2",
     "pouchdb-browser": "^7.2.2",
     "react": "^17.0.2",
