--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-yaml": "^4.1.0",
     "pouchdb": "^7.2.2",
     "pouchdb-browser": "^7.2.2",
+    "random-animal-name-generator": "^0.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-highlight": "^0.14.0",
