--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-textarea-code-editor": "^1.4.14",
     "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "js-yaml": "^4.1.0",
@@ -20,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-highlight": "^0.14.0",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-terminal-ui": "^0.1.14",
     "recoil": "^0.5.2",
