--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "recoil": "^0.5.2",
     "socket.io-client": "^4.4.0",
     "use-pouchdb": "^1.3.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2",
     "xterm": "^4.16.0"
   },
