--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-yaml": "^4.1.0",
     "pouchdb": "^7.2.2",
     "pouchdb-browser": "^7.2.2",
+    "pouchdb-debug": "^7.2.1",
     "random-animal-name-generator": "^0.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
