--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-terminal-ui": "^0.1.14",
+    "react-transition-group": "^4.4.2",
     "recoil": "^0.5.2",
     "socket.io-client": "^4.4.0",
     "use-pouchdb": "^1.3.0",
