--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "icarus.front",
   "version": "0.1.0",
-  "proxy": "http://localhost:8888",
+  "proxy": "http://backend:5000",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
