--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-highlight": "^0.14.0",
     "react-icons": "^4.3.1",
+    "react-pouchdb-changes": "^0.1.1",
     "react-scripts": "5.0.0",
     "react-terminal-ui": "^0.1.14",
     "react-transition-group": "^4.4.2",
